--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "json-log"
   ],
   "main": "index.js",
+  "bin": {
+    "jlogviewer": "bin/jlogviewer",
+    "allproxy_win.bat": "bin/jlogviewer.bat"
+  },
   "scripts": {
     "start": "cd ./node_modules/allproxy && ALLPROXY_APP=jlogviewer node ./headless.js"
   },
