--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "cd ./node_modules/allproxy && ALLPROXY_APP=json-log-viewer node ./headless.js"
+    "start": "cd ./node_modules/allproxy && ALLPROXY_APP=jlogviewer node ./headless.js"
   },
   "repository": {
     "type": "git",
