--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/allproxy/json-log-viewer/issues"
   },
-  "homepage": "https://github.com/allproxy/json-log-viewer#readme"
+  "homepage": "https://github.com/allproxy/json-log-viewer#readme",
+  "dependencies": {
+    "allproxy": "^3.54.3"
+  }
 }
